# OvumCompiler

./: CMakeLists.txt  CODEBASE_STRUCTURE.md  CONTRIBUTING.md  README.md  install.sh  project_tree_raw.txt
lib/lexer/: CMakeLists.txt  Lexer.cpp  Lexer.hpp  LexerError.hpp  SourceCodeWrapper.cpp  SourceCodeWrapper.hpp  utils.cpp  utils.hpp
lib/lexer/handlers/: CharHandler.cpp  CharHandler.hpp  ColonHandler.cpp  ColonHandler.hpp  DefaultHandler.cpp  DefaultHandler.hpp  DotCompositeHandler.cpp  DotCompositeHandler.hpp  Handler.hpp  IdentifierHandler.cpp  IdentifierHandler.hpp  NewlineHandler.cpp  NewlineHandler.hpp  NumberHandler.cpp  NumberHandler.hpp  OperatorHandler.cpp  OperatorHandler.hpp  PunctHandler.cpp  PunctHandler.hpp  SlashHandler.cpp  SlashHandler.hpp  StringHandler.cpp  StringHandler.hpp  WhitespaceHandler.cpp  WhitespaceHandler.hpp
lib/lexer/tokens/: CommentToken.cpp  CommentToken.hpp  EofToken.cpp  EofToken.hpp  IdentToken.cpp  IdentToken.hpp  KeywordToken.cpp  KeywordToken.hpp  LiteralToken.cpp  LiteralToken.hpp  NewlineToken.cpp  NewlineToken.hpp  OperatorToken.cpp  OperatorToken.hpp  PunctToken.cpp  PunctToken.hpp  Token.hpp  TokenFactory.cpp  TokenFactory.hpp  TokenPosition.cpp  TokenPosition.hpp  TokenType.hpp  TokenVisitor.hpp
lib/lexer/values/: BoolValue.cpp  BoolValue.hpp  CharValue.cpp  CharValue.hpp  FloatValue.cpp  FloatValue.hpp  IntValue.cpp  IntValue.hpp  StringValue.cpp  StringValue.hpp  Value.hpp
lib/preprocessor/: CMakeLists.txt  FileGraph.cpp  FileGraph.hpp  PreprocessingParameters.hpp  Preprocessor.cpp  Preprocessor.hpp  PreprocessorError.hpp  TokenDirectivesProcessor.cpp  TokenDirectivesProcessor.hpp  TokenImportProcessor.cpp  TokenImportProcessor.hpp  TokenProcessor.hpp  token_processor_factory.cpp  token_processor_factory.hpp
lib/preprocessor/directives_processor/: TokenDirectivesProcessor.cpp  TokenDirectivesProcessor.hpp  directives_chain_factory.cpp  directives_chain_factory.hpp
lib/preprocessor/directives_processor/handlers/: DefaultHandler.cpp  DefaultHandler.hpp  DefineHandler.cpp  DefineHandler.hpp  DirectiveHandler.hpp  ElseHandler.cpp  ElseHandler.hpp  EndifHandler.cpp  EndifHandler.hpp  IfdefHandler.cpp  IfdefHandler.hpp  IfndefHandler.cpp  IfndefHandler.hpp  UndefHandler.cpp  UndefHandler.hpp
lib/preprocessor/import_processor/: FileGraph.cpp  FileGraph.hpp  TokenImportProcessor.cpp  TokenImportProcessor.hpp
lib/tokens/: CMakeLists.txt  CommentToken.cpp  CommentToken.hpp  EofToken.cpp  EofToken.hpp  IdentToken.cpp  IdentToken.hpp  KeywordToken.cpp  KeywordToken.hpp  LiteralToken.cpp  LiteralToken.hpp  NewlineToken.cpp  NewlineToken.hpp  OperatorToken.cpp  OperatorToken.hpp  PunctToken.cpp  PunctToken.hpp  Token.hpp  TokenFactory.cpp  TokenFactory.hpp  TokenPosition.cpp  TokenPosition.hpp  TokenVisitor.hpp
lib/tokens/values/: BoolValue.cpp  BoolValue.hpp  CharValue.cpp  CharValue.hpp  FloatValue.cpp  FloatValue.hpp  IntValue.cpp  IntValue.hpp  StringValue.cpp  StringValue.hpp  Value.hpp
tests/: CMakeLists.txt  lexer_big_programs_tests.cpp  lexer_tests.cpp  main_test.cpp  parser_bytecode_tests.cpp  preprocessor_tests.cpp  unit_tests.cpp  visitor_tests.cpp
tests/test_data/integrational/positive/results/: quadratic.oil
tests/test_data/integrational/positive/source/: quadratic.ovum
tests/test_data/preprocessor/complex/: test01complex1.txt  test02complex2.txt
tests/test_data/preprocessor/define/: test01definebasic.txt  test02definemultiple.txt  test03defineredefine.txt  test04defineinvalid1.txt  test05defineinvalid2.txt  test06defineinvalid3.txt  test07defineinvalid4.txt  test08definecomplexname.txt  test09definespacing.txt  test10definecomment.txt
tests/test_data/preprocessor/else-extra/: test01ifdefelsebasic.txt  test02ifdefelsefalse.txt  test03ifndefelsebasic.txt  test04ifndefelsefalse.txt  test05ifdefelsenested.txt  test06ifdefelsecomplex.txt  test07ifdefelsemissingendif.txt  test08ifdefelseempty.txt  test09ifdefelseorder.txt  test10ifdefelseundef.txt  test11ifdefmultipileelse.txt  test12ifdefelseinnested.txt  test13ifndefelseinnested.txt  test14ifdefelsewithredef.txt  test15ifdefelseedge.txt
tests/test_data/preprocessor/for_import/: ImportCircular1.txt  ImportCircular2.txt  ImportNested.txt  ImportPlatform.txt  ImportUndef.txt  ImportWithDef.txt  import_platform.txt  import_with_def.txt
tests/test_data/preprocessor/ifdef/: test01ifdefbasic.txt  test02ifdeffalse.txt  test03ifdefnested.txt  test05ifdefempty.txt  test06ifdefmissingendif.txt  test07ifdefinvalid.txt  test08ifdeforder.txt  test09ifdefundef.txt  test10ifdefundeforder.txt  test11ifdefdefineafter.txt  test12ifdefmultiple.txt
tests/test_data/preprocessor/ifndef/: test01ifndefbasic.txt  test02ifndeffalse.txt  test03ifndefnested.txt  test04ifndefcomplex.txt  test05ifndefempty.txt  test06ifndefmissingendif.txt  test07ifndefinvalid.txt  test08ifndeforder.txt  test09ifndefundef.txt  test11ifndefdefineafter.txt  test12ifndefmultiple.txt
tests/test_data/preprocessor/import/: import_circular1.txt  import_circular2.txt  import_nested.txt  test02importmultiple.txt  test04importnested.txt  test05importnonexistent.txt  test06importwithdefines.txt  test07importcircular.txt  test08importundef.txt  test09importcomplex.txt  test10importinvalid.txt
tests/test_data/preprocessor/inputs/complex/: Test01_Complex1.txt  Test02_Complex2.txt
tests/test_data/preprocessor/inputs/define/: Test01_DefineBasic.txt  Test02_DefineMultiple.txt  Test03_DefineRedefine.txt  Test04_DefineInvalid1.txt  (+6 more)
tests/test_data/preprocessor/undef/: test02undefmultiple.txt  test03undefreundef.txt  test04undefinvalid1.txt  test05undefinvalid2.txt  test06undefinvalid3.txt  test07undefinvalid4.txt  test08undefcomplexname.txt  test09undefspacing.txt  test10undefcomment.txt  test11undeforder.txt
tests/test_suites/: LexerUnitTestSuite.cpp  LexerUnitTestSuite.hpp  ParserBytecodeTestSuite.cpp  ParserBytecodeTestSuite.hpp  PreprocessorUnitTestSuite.cpp  PreprocessorUnitTestSuite.hpp  ProjectIntegrationTestSuite.cpp  ProjectIntegrationTestSuite.hpp  VisitorTestSuite.cpp  VisitorTestSuite.hpp
(+425 files in other folders)
