add_library(lexer STATIC
        Lexer.cpp
        SourceCodeWrapper.cpp
        utils.cpp
        handlers/CharHandler.cpp
        handlers/ColonHandler.cpp
        handlers/DefaultHandler.cpp
        handlers/IdentifierHandler.cpp
        handlers/NewlineHandler.cpp
        handlers/NumberHandler.cpp
        handlers/OperatorHandler.cpp
        handlers/PunctHandler.cpp
        handlers/SlashHandler.cpp
        handlers/StringHandler.cpp
        handlers/WhitespaceHandler.cpp
        tokens/CommentToken.cpp
        tokens/EofToken.cpp
        tokens/IdentToken.cpp
        tokens/KeywordToken.cpp
        tokens/LiteralToken.cpp
        tokens/NewlineToken.cpp
        tokens/OperatorToken.cpp
        tokens/PunctToken.cpp
        values/BoolValue.cpp
        values/CharValue.cpp
        values/FloatValue.cpp
        values/IntValue.cpp
        values/StringValue.cpp
        tokens/TokenFactory.cpp
        tokens/TokenPosition.cpp
)

target_include_directories(lexer
        PUBLIC
        ${CMAKE_SOURCE_DIR}
)

target_include_directories(lexer
        PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}
)
